# open-hallucination-index-api

./: .dockerignore  .env.example  .gitignore  .ingest_checkpoint.json  AGENTS.md  BENCHMARK_ERROR_TROUBLESHOOTING.md  Dockerfile  FRONTEND_API_UPDATE.md  GITHUB_ISSUES_TO_CREATE.md  README.md  SECURITY.md  check_trace.json  comparison_20260116_180925_4bf061_report.json  docker-compose.yml  implementation_plan.md  pyproject.toml  response.json  run_benchmark.ps1  run_benchmark.sh  run_benchmark_full.sh  run_benchmark_ohi.sh  run_benchmark_ohi_detailed.sh  run_benchmark_test.sh  run_ingestion.sh  test_api_connection.py  test_classification_config.py  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: api-ci.yml  benchmark-gui-ci.yml  build-package.yml  ci.yml  docker.yml  frontend.yml  ingestion-gui-ci.yml  quality.yml
api/: .env.example
api/scripts/: import_wikipedia_to_neo4j.py  ingest_wiki_dual.py  optimize_neo4j.py  seed_neo4j.py
api/tests/: conftest.py
benchmark/: README.md  runner.py  test_mcp_full.py  test_mcp_individual_tools.py
benchmark/reporters/: __init__.py
docker/: README.md
docker/api/: Dockerfile
docker/cloudflared/: Dockerfile
docker/compose/: .env.classification-examples  docker-compose.yml
docker/mcp-server/: Dockerfile
docker/nginx/: nginx-init.conf  nginx.conf
docker/ohi-mcp-server/: Dockerfile  README.md  package.json
docs/: API.md  CITATION_TRACE_VIEWER.md  CLASSIFICATION_CONFIG.md  CLASSIFICATION_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND.md  PUBLIC_ACCESS.md
frontend/: README.md  TESTING.md
gui_benchmark_app/: README.md
gui_benchmark_app/benchmark/: __init__.py  comparison_benchmark.py  comparison_config.py  gui_app.py  pyproject.toml  test_evaluators_detailed.py  test_evaluators_quick.py
gui_benchmark_app/benchmark/datasets/: hallucination_loader.py  truthfulqa_loader.py
gui_benchmark_app/benchmark/evaluators/: __init__.py  base.py  gpt4_evaluator.py  graph_rag_evaluator.py  ohi_evaluator.py  vector_rag_evaluator.py
gui_benchmark_app/benchmark/reporters/: charts.py  console.py  csv_reporter.py  json_reporter.py  markdown.py  research_report.py
gui_benchmark_app/benchmark/runner/: _benchmarks.py  _cache.py  _display.py  _executor.py  _modes.py  _types.py  runner.py
gui_benchmark_app/benchmark/tests/: conftest.py  test_config.py  test_evaluators.py
ingestion/: __main__.py  models.py  neo4j_store.py  qdrant_store.py
scripts/: README.md  create_github_issues.py  create_github_issues.sh  import_wikipedia_to_neo4j.py  optimize_neo4j.py
src/api/: .env.example  README.md  pyproject.toml
src/api/adapters/: __init__.py  embeddings.py  mcp_client.py  mcp_ohi.py  neo4j.py  qdrant.py  redis_cache.py  redis_trace.py
src/api/config/: __init__.py  dependencies.py  entrypoint.py  settings.py
src/api/interfaces/: __init__.py  llm.py
src/api/models/: __init__.py  entities.py  results.py  track.py
src/api/pipeline/: __init__.py  collector.py  decomposer.py  oracle.py  router.py  scorer.py  selector.py
src/api/server/: app.py
src/api/server/routes/: __init__.py  admin.py  health.py  track.py  verify.py
src/api/server/schemas/: requests.py  responses.py
src/api/server/services/: __init__.py  live_logs.py
src/api/services/: __init__.py  track.py  verify.py
src/api/src/open_hallucination_index/: __init__.py
src/api/src/open_hallucination_index/adapters/: __init__.py
src/api/src/open_hallucination_index/adapters/outbound/: __init__.py  cache_redis.py  embeddings_local.py  graph_neo4j.py  llm_openai.py  mcp_http_base.py  mcp_ohi.py  trace_redis.py  vector_qdrant.py
src/api/src/open_hallucination_index/adapters/outbound/knowledge_sources/: dbpedia.py  europepmc.py  mediawiki.py  ncbi.py  opencitations.py
src/api/src/open_hallucination_index/api/: __init__.py  app.py
src/api/src/open_hallucination_index/api/routes/: health.py  knowledge_track.py  verification.py
src/api/src/open_hallucination_index/api/schemas/: __init__.py  requests.py
src/api/src/open_hallucination_index/application/: __init__.py  knowledge_track_service.py  verify_text.py
src/api/src/open_hallucination_index/domain/: __init__.py  entities.py  knowledge_track.py  results.py
src/api/src/open_hallucination_index/domain/services/: claim_decomposer.py  claim_router.py  evidence_collector.py  mcp_selector.py  mesh_builder.py  scorer.py  verification_oracle.py
src/api/src/open_hallucination_index/infrastructure/: __init__.py  config.py  dependencies.py  entrypoint.py
src/api/src/open_hallucination_index/ports/: __init__.py  cache.py  claim_decomposer.py  knowledge_store.py  mcp_source.py  scorer.py  verification_oracle.py
src/api/tests/: __init__.py  conftest.py
src/api/tests/integration/: __init__.py  test_api.py  test_full_routes.py
src/api/tests/unit/: __init__.py  test_claim_decomposer.py  test_entities.py  test_results.py  test_scorer.py  test_verification_oracle.py
src/api/tests/unit/adapters/: test_llm_adapter.py  test_neo4j_adapter.py  test_qdrant_adapter.py  test_redis_adapter.py
src/benchmark/: README.md  __init__.py  __main__.py  benchmark_dataset.csv  comparison_benchmark.py  comparison_config.py  comparison_metrics.py  comparison_runner.py  config.py  hf_dataset_converter.py  legacy_entry.py  metrics.py  models.py  pyproject.toml  runner.py  test_evaluators_detailed.py  test_evaluators_quick.py  test_mcp_full.py  test_mcp_individual_tools.py
src/benchmark/analysis/: __init__.py  statistical.py
src/benchmark/datasets/: __init__.py  hallucination_loader.py  truthfulqa_loader.py
src/benchmark/evaluators/: __init__.py  base.py  fair_vector_rag_evaluator.py  gpt4_evaluator.py  graph_rag_evaluator.py  ohi_evaluator.py  vector_rag_evaluator.py
src/benchmark/reporters/: base.py  charts.py  console.py  csv_reporter.py  json_reporter.py  markdown.py
src/benchmark/runner/: _benchmarks.py  _display.py
src/ingestion/: README.md  __init__.py  __main__.py  checkpoint.py  downloader.py  models.py  neo4j_store.py  pipeline.py  preprocessor.py  pyproject.toml  qdrant_store.py
(+224 files in other folders)
