[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-hallucination-index-benchmark"
version = "0.1.0"
description = "Research-grade benchmark suite for Open Hallucination Index"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "shiftbloom studio.", email = "fabian@shiftbloom.studio" }
]
keywords = ["benchmark", "hallucination", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.28.1",
    "rich>=13.9.0",
    "datasets>=3.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "PySide6>=6.7.0",
    "qdrant-client>=1.16.2",
    "neo4j>=6.0.3",
    "redis>=5.0.0",
    "sentence-transformers>=5.2.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[project.scripts]
ohi-benchmark = "benchmark.comparison_benchmark:main"
ohi-benchmark-gui = "benchmark.gui_app:main"

[tool.setuptools]
packages = ["benchmark"]
package-dir = { benchmark = "." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
