[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohi-benchmark"
version = "2.0.0"
description = "Research-grade benchmark suite for evaluating the Open Hallucination Index API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OHI Team", email = "fabian@shiftbloom.studio" }
]
keywords = ["benchmark", "llm", "hallucination", "evaluation", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.28.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "datasets>=2.14.0",
    # Comparison benchmark dependencies
    "openai>=1.0.0",
    "seaborn>=0.12.0",
    "qdrant-client>=1.6.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ohi-benchmark = "benchmark.__main__:main"
ohi-comparison = "benchmark.comparison_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["benchmark"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
