[project]
name = "ohi-ingestion"
version = "3.0.0"
description = "High-performance Wikipedia ingestion pipeline for OHI"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.6.0",
    "neo4j>=5.0.0",
    "lxml>=4.9.0",
    "mwparserfromhell>=0.6.0",
    "nltk>=3.8.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingestion"]

[tool.setuptools.package-dir]
ingestion = "."
